[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Environment/lever.png" type="Texture" id=1]
[ext_resource path="res://Assets/Environment/leverAnim.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Lever.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 44, 40 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 44, 0, 44, 40 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 88, 0, 44, 40 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": false,
"name": "flip",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 26.0087

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4.56512, 9.81648 )

[node name="Lever" type="StaticBody2D"]
collision_mask = 2
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 4.09333, -2.77514 )
scale = Vector2( 1.18606, 1.13876 )
frames = SubResource( 4 )
animation = "idle"
playing = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 2
position = Vector2( -5.81901, 16.1922 )
shape = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16.5696, 1.21586 )
shape = SubResource( 5 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
